--- a/src/projects.css
+++ b/src/projects.css
@@ -81,6 +81,9 @@ html.urban-tep .intro-screen-title {
 
 /* === EO4SD ===================================== */
 /* specific font-family */
+.eo4sd.newDesign body,
+.eo4sd.newDesign .component-button,
+
 .eo4sd.newDesign #header,
 .eo4sd.newDesign #header h1,
 .eo4sd.newDesign #header a,
@@ -89,9 +92,21 @@ html.urban-tep .intro-screen-title {
 .eo4sd.newDesign #content-intro-guide,
 .eo4sd.newDesign #view-selector .field .label,
 .eo4sd.newDesign.x-border-box .custom-combo .x-form-text,
+.eo4sd.newDesign.x-border-box .x-form-text,
 .eo4sd.newDesign #app-view-selector-visualization-save .x-btn.custom-button.x-btn-default-small .x-btn-inner,
 .eo4sd.newDesign .thematic-maps-settings .x-window-header-text-default,
 .eo4sd.newDesign .chart-panel .x-panel-header-text,
+.eo4sd.newDesign .x-boundlist .x-boundlist-item,
+.eo4sd.newDesign .paging-toolbar .x-toolbar-text,
+.eo4sd.newDesign .paging-toolbar .x-form-text,
+.eo4sd.newDesign .tools-filters-list .x-form-display-field,
+.eo4sd.newDesign .x-column-header,
+.eo4sd.newDesign .x-grid-row .x-grid-cell,
+.eo4sd.newDesign .x-btn .x-btn-inner,
+.eo4sd.newDesign .x-panel-header-text-default,
+.eo4sd.newDesign .x-panel-header-text-default-framed,
+.eo4sd.newDesign .x-form-item,
+.eo4sd.newDesign .x-fieldset-header,
 
 .eo4sd #top-toolbar .item,
 .eo4sd .floater-header-title,
@@ -143,20 +158,20 @@ html.urban-tep .intro-screen-title {
 .eo4sd.newDesign.x-border-box .custom-combo .x-form-trigger,
 .eo4sd.newDesign .x-btn.custom-button.x-btn-default-small,
 .eo4sd.newDesign .select-multi-container.top-bar-multiselect,
-.eo4sd.newDesign .component-button.compare-button:hover,
-.eo4sd.newDesign .select-basic-container.top-bar-select {
-	background: rgba(255, 255, 255, .2);
+.eo4sd.newDesign .select-basic-container.top-bar-select,
+.eo4sd.newDesign .component-button.compare-button {
+	background: rgba(255, 255, 255, .3);
 }
 .eo4sd.newDesign.x-border-box .custom-combo:hover .x-form-text,
 .eo4sd.newDesign.x-border-box .custom-combo:hover .x-form-trigger,
 .eo4sd.newDesign.x-border-box .custom-combo:hover .x-form-trigger.x-form-refresh-trigger,
 .eo4sd.newDesign .x-btn.custom-button.x-btn-default-small:hover {
-	background-color: rgba(255, 255, 255, .3) !important;
+	background-color: rgba(255, 255, 255, .4) !important;
 }
 .eo4sd.newDesign .select-multi-container.top-bar-multiselect:hover,
 .eo4sd.newDesign .select-basic-container.top-bar-select:hover,
-.eo4sd.newDesign .component-button.compare-button {
-	background: rgba(255, 255, 255, .3);
+.eo4sd.newDesign .component-button.compare-button:hover {
+	background: rgba(255, 255, 255, .4);
 }
 
 /* Top toolbar */
@@ -198,4 +213,15 @@ html.urban-tep .intro-screen-title {
 .eo4sd.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:hover:before,
 .eo4sd.newDesign .chart-panel .x-panel-header .tool-icon.tool-active:before {
 	color: white;
+}
+
+/* Area tree */
+.eo4sd.newDesign .x-grid-row .x-grid-cell {
+	font-size: .75rem;
+	color: #444;
+}
+
+/* Button */
+.eo4sd.newDesign .x-btn-default-small .x-btn-inner {
+	line-height: 1.8;
 }
