--- a/src/components/presentation/controls/ViewsList/ViewsList.css
+++ b/src/components/presentation/controls/ViewsList/ViewsList.css
@@ -13,7 +13,14 @@
 	font-size: .9rem;
 }
 
-.view-list-title {
+.ptr-views-list-tilte-container {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+	position: relative;
+}
+
+.ptr-views-list-title {
 	font-family: "Roboto", sans-serif;
 	font-size: 2.3rem;
 	font-weight: 300;
@@ -21,24 +28,51 @@
 	width: 100%;
 	margin-bottom: 1rem;
 }
-.view-list-content {
+
+.ptr-views-list-logo {
+	max-height: 60px;
+	margin-right: 1rem;
+}
+
+.ptr-views-list-tilte-container .ptr-views-list-title {
+	margin-bottom: 0;
+}
+
+.ptr-views-list-description {
+	margin: 0 0 1.5rem;
+}
+
+.ptr-views-list-description p {
+	font-size: .875rem;
+	color: rgb(65,69,81);
+	max-width: 50rem;
+	padding-right: 1rem;
+}
+
+.ptr-views-list-description a {
+	font-size: .875rem;
+	text-decoration: underline;
+	color: rgba(153,54,75,1);
+}
+
+.ptr-views-list-content {
 	display: flex;
 	flex-wrap: wrap;
 }
 
 @media (max-width: 1600px) {
-	.view-list-title {
+	.ptr-views-list-title {
 		font-size: 2.15rem;
 	}
 }
 @media (max-width: 1200px) {
-	.view-list-title {
+	.ptr-views-list-title {
 		font-size: 2rem;
 	}
 }
 
 @media (max-width: 1000px), (max-height: 700px) {
-	.view-list-title {
+	.ptr-views-list-title {
 		font-size: 1.8rem;
 	}
 }
