Handling place from react

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -498,7 +498,9 @@ body.intro #content-intro-terms {
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding-left: 15px;
+	padding-left: 26px;
+	display: flex;
+	align-items: center;
 }
 
 #view-selector > .group {
