--- a/src/components/common/controls/User/style.css
+++ b/src/components/common/controls/User/style.css
@@ -13,12 +13,17 @@
 }
 
 .ptr-user-name, .ptr-user-login {
+	display: flex;
 	height: 2rem;
 	padding: .25rem;
 	white-space: nowrap;
 	overflow: hidden;
 	line-height: 1.5rem;
 	font-size: .9375rem;
+}
+
+.ptr-user-login {
+	align-items: center;
 }
 
 .ptr-user-login > a {
