--- a/src/projects.css
+++ b/src/projects.css
@@ -298,6 +298,9 @@ html.urban-tep .intro-screen-title {
 }
 
 /* top-tool-bar */
+.pucs.newDesign #top-toolbar .item {
+	font-weight: 500;
+}
 .pucs.newDesign #top-toolbar .item.open {
 	color: rgba(212,90,58,1);
 }
