--- a/src/components/presentation/controls/ViewsList/ViewsList.css
+++ b/src/components/presentation/controls/ViewsList/ViewsList.css
@@ -1,10 +1,12 @@
 .ptr-views-list {
+	display: flex;
+	flex-direction: column;
 	overflow-y: auto;
 	height: 100%;
 	width: 100%;
 }
 .ptr-overlay .ptr-views-list {
-	height: calc(100% - 3rem);
+	height: 100%;
 	width: auto;
 }
 
@@ -13,8 +15,6 @@
 }
 
 .ptr-views-list-header {
-	display: flex;
-	flex-direction: column;
 	padding: 1.5rem 1.5rem 0;
 }
 
@@ -61,9 +61,13 @@
 }
 
 .ptr-views-list-content {
+	padding: 1.5rem;
+	flex: 1;
+}
+
+.ptr-views-list-content > div {
 	display: flex;
 	flex-wrap: wrap;
-	padding: 1.5rem;
 }
 
 @media (max-width: 1600px) {
