Refactor: Fix share component - clear users/groups on logout

--- a/src/view/components/Button/Button.css
+++ b/src/view/components/Button/Button.css
@@ -115,3 +115,11 @@
 	background: rgb(214, 214, 214);
 	cursor: not-allowed;
 }
+
+.ptr-button.header-button {
+	height: 29px;
+	align-items: center;
+	vertical-align: middle;
+	display: flex;
+	color: rgb(153, 153, 153);
+}
