--- a/src/components/common/intro/introHeader/style.css
+++ b/src/components/common/intro/introHeader/style.css
@@ -8,6 +8,9 @@
 	display: flex;
 	flex-direction: column;
 }
+.ptr-intro-header.small {
+	min-height: 5rem;
+}
 
 .ptr-intro-header-overlay {
 	position: absolute;
