--- a/src/components/presentation/controls/ViewsList/ViewsList.css
+++ b/src/components/presentation/controls/ViewsList/ViewsList.css
@@ -46,6 +46,9 @@
 .ptr-views-list-description {
 	margin: 0 0 0.5rem;
 }
+.ptr-views-list-description {
+	margin: 1rem 1.5rem 0.5rem;
+}
 
 .ptr-views-list-description p {
 	font-size: .875rem;
