--- a/src/components/common/maps/WorldWindMap/style.css
+++ b/src/components/common/maps/WorldWindMap/style.css
@@ -1,7 +1,9 @@
 .ptr-world-wind-map {
 	background: #ddd;
+	font-family: "Roboto", sans-serif;
 	height: 100%;
 	width: 100%;
+	position: relative;
 }
 
 .ptr-world-wind-map-canvas {
