--- a/src/components/specific/LPISCheck/intro/CheckTable/ChangeReviewsTable.css
+++ b/src/components/specific/LPISCheck/intro/CheckTable/ChangeReviewsTable.css
@@ -1,124 +1,124 @@
 /* === Change reviews table ==================================== */
-.ptr-table.change-reviews-table {
+.ptr-table.change-reviews-lpis-table {
 	margin-top: -2rem;
 	height: calc(100% + 2rem); /* account for margin */
 	width: 100%;
 }
 
 /* header */
-.ptr-table.change-reviews-table .ptr-table-header {
+.ptr-table.change-reviews-lpis-table .ptr-table-header {
 	padding: 0 .5rem;
 	margin-right: 16px;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item {
 	color: rgba(208,212,220,1);
 }
-.ptr-table.change-reviews-table .ptr-table-header-item:first-child {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item:first-child {
 	overflow: unset;
 }
 /* select */
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-control {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-control {
 	background-color: transparent;
 	text-transform: none;
 	height: 2.2rem;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-placeholder {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-placeholder {
 	color: rgba(208,212,220,1);
 	font-size: .9375rem;
 	line-height: 2.2rem;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-clear-zone .Select-clear{
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-clear-zone .Select-clear{
 	line-height: 2.2rem;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-clear-zone:hover {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-clear-zone:hover {
 	color: #888;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-arrow-zone:hover > .Select-arrow {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select .Select-arrow-zone:hover > .Select-arrow {
 	border-top-color: #888;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select-menu-outer {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select-menu-outer {
 	text-transform: none;
 	border: 0;
 	min-width: 200px;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item .ptr-ui-select.inverted .Select-menu-outer .Select-option {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item .ptr-ui-select.inverted .Select-menu-outer .Select-option {
 	line-height: 1.45rem;
 }
 
 
 /* records */
-.ptr-table.change-reviews-table .ptr-table-row {
+.ptr-table.change-reviews-lpis-table .ptr-table-row {
 	padding: 0 .5rem;
 }
-.ptr-table.change-reviews-table .ptr-table-row-item.highlighted > i {
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item.highlighted > i {
 	background: yellow;
 	font-style: normal;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item.buttons,
-.ptr-table.change-reviews-table .ptr-table-row-item.buttons {
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item.buttons,
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item.buttons {
 	min-width: 7rem;
 	justify-content: flex-end;
 }
-.ptr-table.change-reviews-table .ptr-table-row-item:first-child svg {
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:first-child svg {
 	margin-left: -0.5rem;
 	min-width: 32px;
 }
-.ptr-table.change-reviews-table .ptr-table-header-item:nth-child(1),
-.ptr-table.change-reviews-table .ptr-table-row-item:nth-child(1) {
-	flex-basis: 25%;
-}
-.ptr-table.change-reviews-table .ptr-table-header-item:nth-child(2),
-.ptr-table.change-reviews-table .ptr-table-row-item:nth-child(2) {
-	flex-basis: 25%;
-}
-.ptr-table.change-reviews-table .ptr-table-row-item:nth-child(2) {
-	font-weight: 600;
-}
-.ptr-table.change-reviews-table .ptr-table-header-item:nth-child(3),
-.ptr-table.change-reviews-table .ptr-table-row-item:nth-child(3) {
-	flex-basis: 15%;
-}
-.ptr-table.change-reviews-table .ptr-table-header-item:nth-child(4),
-.ptr-table.change-reviews-table .ptr-table-row-item:nth-child(4) {
-	flex-basis: 15%;
-}
-.ptr-table.change-reviews-table .ptr-table-header-item:nth-child(5),
-.ptr-table.change-reviews-table .ptr-table-row-item:nth-child(5){
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item:nth-child(1),
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:nth-child(1) {
 	flex-basis: 20%;
 }
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item:nth-child(2),
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:nth-child(2) {
+	flex-basis: 10%;
+}
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:nth-child(2) {
+	font-weight: 600;
+}
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item:nth-child(3),
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:nth-child(3) {
+	flex-basis: 60%;
+}
+.ptr-table.change-reviews-lpis-table .ptr-table-header-item:nth-child(4),
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:nth-child(4) {
+	flex-basis: 10%;
+}
+/* .ptr-table.change-reviews-lpis-table .ptr-table-header-item:nth-child(5),
+.ptr-table.change-reviews-lpis-table .ptr-table-row-item:nth-child(5){
+	flex-basis: 20%;
+} */
 
 /* details */
-.ptr-table-row-details.ptr-change-reviews-table-details {
+.ptr-table-row-details.ptr-change-reviews-lpis-table-details {
 	flex-direction: column;
 }
-.ptr-table-row-details.ptr-change-reviews-table-details > div {
+.ptr-table-row-details.ptr-change-reviews-lpis-table-details > div {
 	display: flex;
 	padding: 1rem 3rem;
 	border-top: 1px dashed #ccc;
 }
-.ptr-change-reviews-table-details-top-bar {
+.ptr-change-reviews-lpis-table-details-top-bar {
 	display: flex;
 	justify-content: space-between;
 }
-.ptr-change-reviews-table-details-top-bar > div:first-child {
+.ptr-change-reviews-lpis-table-details-top-bar > div:first-child {
 	display: flex;
 }
-.ptr-change-reviews-table-details-top-bar > div:first-child > div {
+.ptr-change-reviews-lpis-table-details-top-bar > div:first-child > div {
 	/*min-width: 5rem;*/
 	/*max-width: 20%;*/
 	margin-right: 2rem;
 }
-.ptr-change-reviews-table-details-top-bar > div:last-child {
+.ptr-change-reviews-lpis-table-details-top-bar > div:last-child {
 	/*flex: 1;*/
 }
-.ptr-change-reviews-table-details-descriptions {
+.ptr-change-reviews-lpis-table-details-descriptions {
 	display: flex;
 }
-.ptr-change-reviews-table-details-descriptions > div {
+.ptr-change-reviews-lpis-table-details-descriptions > div {
 	flex-basis: 50%;
 	padding-right: 3rem;
 }
-.ptr-change-reviews-table-details-descriptions h3 {
+.ptr-change-reviews-lpis-table-details-descriptions h3 {
 	font-size: .875rem;
 	font-weight: normal;
 	color: rgba(193,54,75,1);
@@ -126,18 +126,18 @@
 	text-transform: uppercase;
 }
 
-.ptr-change-reviews-table-details-record {
+.ptr-change-reviews-lpis-table-details-record {
 
 }
-.ptr-change-reviews-table-details-record h4 {
+.ptr-change-reviews-lpis-table-details-record h4 {
 	font-size: .8125rem;
 	font-weight: normal;
 	/*text-transform: uppercase;*/
 	margin-bottom: .1rem;
 	color: rgba(106,110,120,1);
 }
-.ptr-change-reviews-table-details-record p,
-.ptr-change-reviews-table-details-record span {
+.ptr-change-reviews-lpis-table-details-record p,
+.ptr-change-reviews-lpis-table-details-record span {
 	font-size: .875rem;
 	font-weight: normal;
 	line-height: 1.2rem;
@@ -145,7 +145,7 @@
 	max-width: 35rem;
 	color: rgba(65,69,81,1);
 }
-.ptr-change-reviews-table-details-record p.highlighted > i {
+.ptr-change-reviews-lpis-table-details-record p.highlighted > i {
 	background: yellow;
 	font-style: normal;
 	font-weight: bold;
