--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,14 @@ body {
 	font-family: "Open Sans", sans-serif;
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
+	margin: 0px;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#ptr{
+	height: 100vh;	
 }
 
 /* ================================================================
