--- a/src/components/common/Screens/style.css
+++ b/src/components/common/Screens/style.css
@@ -8,7 +8,8 @@
 	transition: width .5s ease-in-out;
 }
 .ptr-screen p {
-	padding-top: 1rem;
+	position: absolute;
+	bottom: 0;
 }
 .ptr-screen.disabled {
 	background: #ccc;
