--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
 	font-family: "Open Sans", sans-serif;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 /* ================================================================
