colours: fine-tune a bit

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,12 @@
 $gray0: #fffefc;
-$gray1: #e5e4e2;
-$gray2: #cbcac8;
-$gray3: #b1b0ae;
-$gray4: #999896;
+//$gray1: #e5e4e2;
+$gray1: #f0f0ef;
+//$gray2: #cbcac8;
+$gray2: #dcdcda;
+//$gray3: #b1b0ae;
+$gray3: #bebdbb;
+//$gray4: #999896;
+$gray4: #9d9c9b;
 $gray5: #81807e;
 $gray6: #676664;
 $gray7: #4d4c4b;
@@ -11,14 +15,20 @@ $gray9: #1f1e1d;
 $gray10: #040300;
 
 $accent0: #fffefc;
-$accent1: #dbefec;
-$accent2:  #b6e0dc;
-$accent3:  #90d1cc;
-$accent4:  #66c1bc;
+//$accent1: #dbefec;
+$accent1: #eaf6f4;
+//$accent2:  #b6e0dc;
+$accent2:  #c9e8e5;
+//$accent3:  #90d1cc;
+$accent3:  #a2d8d3;
+//$accent4:  #66c1bc;
+$accent4:  #75c7c3;
 $accent5:  #2ab2ad;
 $accent6:  #2a8c88;
-$accent7:  #266864;
-$accent8:  #204643;
+//$accent7:  #266864;
+$accent7:  #24615d;
+//$accent8:  #204643;
+$accent8:  #1d3f3c;
 $accent9:  #172624;
 $accent10:  #040300;
 
