Base styles structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+/*
+
+
+
+
+
+
+          DEPRECATED
+          for reference only
+
+
+
+
+
+
+
+
+ */
+
+
 /* Table of contents
 
 	BASIC ELEMENTS............declarations for basic HTML elements
