--- a/src/components/presentation/Tree/tree.css
+++ b/src/components/presentation/Tree/tree.css
@@ -1,37 +1,37 @@
-.gs-tree{
+.ptr-tree{
     list-style: none;
     margin: 0;
     padding: 0;
     white-space: nowrap;
 }
 
-.gs-tree .folder.expanded > span {
+.ptr-tree .folder.expanded > span {
     color: #c92d42;
 }
 
-.gs-tree .folder{
+.ptr-tree .folder{
     padding-left: .25rem;
 }
 
-.gs-tree .folder ul {
+.ptr-tree .folder ul {
     padding-left: 1rem;
 }
 
-.gs-tree .folder > span:before {
+.ptr-tree .folder > span:before {
     margin-right: .25rem;
     position: relative;
     top: .125rem;
 }
 
-.gs-tree .title {
+.ptr-tree .title {
     margin-left: 4px;
 }
 
-.gs-tree .ptr-icon.hover{
+.ptr-tree .ptr-icon.hover{
     cursor: pointer;
 }
-.gs-tree span.hover,
-.gs-tree input.hover,
-.gs-tree li.hover{
+.ptr-tree span.hover,
+.ptr-tree input.hover,
+.ptr-tree li.hover{
     cursor: pointer;
 }
