--- a/src/components/containers/controls/Select/Item.css
+++ b/src/components/containers/controls/Select/Item.css
@@ -1,81 +1,51 @@
-a.ptr-item {
-	cursor: pointer;
-}
-
 .ptr-item,
 a.ptr-item {
 	display: flex;
 	border-radius: .25rem;
-	border: 2px solid #95A6C7;
-	background: #ABBAD8;
-	background: #B6BCC7;
+	border: 2px solid var(--base4);
+	background: var(--base3);
 	margin-bottom: .875rem;
-
 	padding: 0 .5rem;
-	color: #1452A2;
-
+	color: var(--base6);
 	position: relative;
 }
 
-.ptr-item .ptr-icon.hover:hover{
-	color: rgb(48, 111, 226);
+a.ptr-item {
+	cursor: pointer;
 }
 
-.ptr-item span {
+/* .ptr-item:hover,
+a.ptr-item:hover {
+	color: var(--accent7);
+} */
+
+.ptr-item .ptr-icon.hover:hover{
+	color: var(--accent5);
+}
+
+.ptr-item span,
+.ptr-item .option-id{
 	line-height: 1.875rem;
 }
 
 .ptr-item:hover {
-	border-color: #4d8aff;
+	border-color: var(--accent4);
 }
 
-.ptr-item::after,
-.ptr-item:not(.simple)::after {
-	/* content: "\f101"; */
-	font-family: Icons;
-	font-size: 1.25rem;
-	display: block;
-	position: absolute;
-	right:.4rem;
-	top:0;
-/*	color: #6B90BF;*/
-	color: #859FBF;
-}
-
-.ptr-item.template {
-/*	background: transparent;*/
-	background: #bebebe;
-}
-
-.ptr-item.add {
-	border-style: dashed;
-	border-color: #9c9c9c;
-	color: #8e8e8e;
-	background: transparent;
-}
-
-.ptr-item.add:hover {
-	border-color: #4d8aff;
-	color: #797979;
-}
-
-.ptr-item.add::after {
-	color: #a2a2a2;
-}
 
 .ptr-item .label{
-	margin-left: 8px;
+	display: flex;
+	margin-left: 0.5rem;
 }
 
 .ptr-item .option-id{
-	color: #999;
+	color: var(--base4);
 	display: inline-block;
 	font-size: .75rem;
 	text-align: center;
-	padding-right: .3rem;
-	line-height: 1;
+	margin-right: 1ch;
 	text-overflow: ellipsis;
-    max-width: 10ch;
+    max-width: 8ch;
     white-space: nowrap;
     overflow: hidden;
 }
