Backoffice styles - add new colours pallet

--- a/src/apps/backOffice/components/pages/MetadataBase/metadataBase.scss
+++ b/src/apps/backOffice/components/pages/MetadataBase/metadataBase.scss
@@ -1,3 +1,5 @@
+@import '../../../../../styles/variables';
+
 .ptr-bo-metadata-base-menu{
     min-width: 200px
 }
@@ -11,4 +13,3 @@
     flex: 1 1;
     position: relative;
 }
-
