--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -52,3 +52,31 @@ $accent7:  #24615d;
 $accent8:  #1d3f3c;
 $accent9:  #172624;
 $accent10:  #040300;
+
+$bo0: #c7c5c2;
+$bo1: #b1afad;
+$bo2: #9c9a98;
+$bo3: #878683;
+$bo4: #737270;
+$bo5: #605f5c;
+$bo6: #4d4c4a;
+$bo7: #3b3a38;
+$bo8: #2a2927;
+$bo9: #191917;
+$bo10: #040300;
+
+$bo-accent0: #c7c5c2;
+$bo-accent1: #a9b5b2;
+$bo-accent2:  #8ba6a1;
+$bo-accent3:  #6c9692;
+$bo-accent4:  #4b8682;
+$bo-accent5:  #227773;
+$bo-accent6:  #215f5b;
+$bo-accent7:  #1e4844;
+$bo-accent8:  #19322f;
+$bo-accent9:  #131d1b;
+$bo-accent10:  #040300;
+
+$bo-accent-lighter0: #aecbc8;
+$bo-accent-lighter1: #c1d7d5;
+$bo-accent-lighter2: #d3e3e2;
