--- a/src/apps/backOffice/styles/index.scss
+++ b/src/apps/backOffice/styles/index.scss
@@ -10,7 +10,7 @@
 	display: flex;
 	flex-direction: column;
 
-	background: $gray5;
+	background: $bo0;
 }
 
 .ptr-bo-menu {
@@ -22,4 +22,9 @@
 
 .ptr-bo-content {
 	flex-grow: 1;
+}
+
+.ptr-base-page{
+    display: flex;
+    height: 100%;
 }
